# HinaPE-Houdini

./: .gitignore  CMakeLists.txt  LearnHapi.py  Practice01.hipnc  README.md  test.cpp
HinaPE/: CMakeLists.txt  common.h  kernels.h  test.cpp
HinaPE/Bender2019/: Bender2019.cpp  Bender2019.h
HinaPE/CUDA/: DFSPH_CUDA.cu  DFSPH_CUDA.h  test.cu
HinaPE/DFSPH/: DFSPH.cpp  DFSPH.h
HinaPE/DFSPH1/: DFSPH1.cpp  DFSPH1.h
HinaPE/DFSPH2/: DFSPH2.cu  DFSPH2.cuh
HinaPE/DFSPH_Akinci/: DFSPH_Akinci.cpp  DFSPH_Akinci.h
HinaPE/DFSPH_Akinci_Dynamics/: DFSPH_Akinci_Dynamics.cpp  DFSPH_Akinci_Dynamics.h
HinaPE/DFSPH_Bender/: DFSPH_Bender.cpp  DFSPH_Bender.h
HinaPE/PBF/: PBF.cpp  PBF.h
HinaPE/PBF_Akinci/: PBF_Akinci.cpp  PBF_Akinci.h
HinaPE/PCISPH_Akinci/: PCISPH_Akinci.cpp  PCISPH_Akinci.h
HinaPE/Smoke/: AdvectionSolver.cpp  AdvectionSolver.h  BoundarySolver.cpp  BoundarySolver.h  DiffusionSolver.cpp  DiffusionSolver.h  EmitterSolver.cpp  EmitterSolver.h  ExternalForceSolver.cpp  ExternalForceSolver.h  FieldUtils.cpp  FieldUtils.h  PressureSolver.cpp  PressureSolver.h  Smoke.cpp  Smoke.h  SmokeNew.cpp  SmokeNew.h  ViscositySolver.cpp  ViscositySolver.h
HinaPE/common/: emitter.h  fluid.h  geometry.h  kernels.h  neighbors.h  numerics.h  particles.h  test.cpp
cuda/: CMakeLists.txt
hdk/: CMakeLists.txt  Entrance.cpp  GAS_CFL_SubStep.cpp  GAS_CFL_SubStep.h  GAS_Hina_SubStep.cpp  GAS_Hina_SubStep.h  SIM_Hina_Generator.h
hdk/00-sop/: CMakeLists.txt  DLL.cpp  SOP01.cpp  SOP01.h
hdk/01-cloth/: CMakeLists.txt  DLLEntrance.cpp  attribute_helper.h  cloth.hipnc  solver.cpp  solver.h
hdk/01-dop/: CMakeLists.txt  DLL.cpp  DOP01.cpp  DOP01.h
hdk/02-sim/: CMakeLists.txt  DLL.cpp  SIM01.cpp  SIM01.h
hdk/03-solver/: CMakeLists.txt  Entrance.cpp  Solver01.cpp  Solver01.h  collider.cpp  collider.h  data.cpp  data.h  solver.cpp  solver.h
hdk/Advect/: GAS_HIna_AdvectVel.cpp  GAS_HIna_AdvectVel.h  GAS_Hina_AdvectPos.cpp  GAS_Hina_AdvectPos.h  GAS_Hina_SemiImplicitEuler.cpp  GAS_Hina_SemiImplicitEuler.h  GAS_Hina_SubStep.cpp
hdk/Akinci2012/: SIM_Hina_Akinci2012BoundaryParticles.cpp  SIM_Hina_Akinci2012BoundaryParticles.h  SIM_Hina_Akinci_Particles.cpp  SIM_Hina_Akinci_Particles.h  SIM_Hina_Particles_Akinci.cpp  SIM_Hina_Particles_Akinci.h  SIM_Hina_Particles_Bender.cpp
hdk/Base/: GAS_Hina_VolumeParticleEmitter.cpp  GAS_Hina_VolumeParticleEmitter.h  SIM_Hina_Geometry.cpp  SIM_Hina_Geometry.h  SIM_Hina_Particles.cpp  SIM_Hina_Particles.h  SIM_Hina_RigidBody.cpp  SIM_Hina_RigidBody.h  utils.h
hdk/Boundary/: AlignedBox.h  GAS_ConfigureSemiAnalyticalCollider.cpp  GAS_ConfigureSemiAnalyticalCollider.h  GAS_SetCollider.cpp  GAS_SetCollider.h  SIM_Hina_Particles_Akinci.cpp  SIM_Hina_Particles_Akinci.h  SIM_Hina_Particles_Bender.cpp  SIM_Hina_Particles_Bender.h  SIM_Hina_SDF_Boundary.cpp  SIM_Hina_SDF_Boundary.h  SIM_SemiAnalyticalCollider.cpp  SIM_SemiAnalyticalCollider.h  SemiAnalyticalBoundary.h
hdk/Collision/: GAS_Hina_CollisionSolve.cpp  GAS_Hina_CollisionSolve.h  GAS_Hina_EnforceBoundary.cpp  GAS_Hina_EnforceBoundary.h  SIM_Hina_RigidBodyCollider.cpp  SIM_Hina_RigidBodyCollider.h
hdk/Common/: GAS_Hina_BuildNeighborLists.cpp  GAS_Hina_BuildNeighborLists.h  GAS_Hina_ClearForce.cpp  GAS_Hina_ClearForce.h  GAS_Hina_GravityForce.cpp  GAS_Hina_GravityForce.h  GAS_Hina_SemiImplicitEuler.cpp  GAS_Hina_SubStep.cpp  GAS_Hina_UpdateDensity.cpp  GAS_Hina_VolumeParticleEmitter.cpp  SIM_Hina_Generator.h  SIM_Hina_Particles.cpp  SIM_Hina_Particles.h  SIM_Hina_RigidBodyCollider.cpp  SIM_Hina_RigidBodyCollider.h
hdk/DFSPH/: Akinci2012.hipnc  DFSPH.hipnc  GAS_Hina_DFSPHSolver.cpp  GAS_Hina_DFSPHSolver.h  GAS_Hina_DFSPH_Solver.cpp  GAS_Hina_DFSPH_Solver.h  GAS_Hina_DFSPH_SolverSPlisHSPlasH.cpp  GAS_Hina_DFSPH_SolverSPlisHSPlasH.h  GAS_Hina_Solver_DFSPH.cpp  GAS_Hina_Solver_DFSPH.h  GAS_Hina_Solver_DFSPH_Dynamics.cpp  GAS_Hina_Solver_DFSPH_Dynamics.h  SIM_Hina_DFSPHParticles.cpp  SIM_Hina_DFSPHParticles.h  SIM_Hina_DFSPH_Particles.cpp  SIM_Hina_DFSPH_Particles.h  SIM_Hina_Particles_DFSPH.cpp  SIM_Hina_Particles_DFSPH.h
hdk/Density/: GAS_Hina_UpdateDensity.cpp  GAS_Hina_UpdateDensity.h  GAS_Hina_UpdateDensityAkinci.cpp  GAS_Hina_UpdateDensityAkinci.h  GAS_Hina_UpdateVolume.cpp  GAS_Hina_UpdateVolume.h  GAS_ParticleDensity.cpp  GAS_ParticleDensity.h
hdk/Emitter/: GAS_Hina_VolumeParticleEmitter.cpp  GAS_Hina_VolumeParticleEmitter.h  GAS_VolumeParticleEmitter.cpp  GAS_VolumeParticleEmitter.h
hdk/Neighbor/: GAS_BuildNeighborLists.cpp  GAS_BuildNeighborLists.h  GAS_Hina_BuildNeighborLists.cpp  GAS_Hina_BuildNeighborLists.h
hdk/PBF/: GAS_Hina_Solver_PBF.cpp  GAS_Hina_Solver_PBF.h  SIM_Hina_Particles_PBF.cpp  SIM_Hina_Particles_PBF.h
hdk/PCISPH/: GAS_Hina_Solver_PCISPH.cpp  GAS_Hina_Solver_PCISPH.h  SIM_Hina_Particles_PCISPH.cpp  SIM_Hina_Particles_PCISPH.h
hdk/Particles/: GAS_ConfigureFluidParticleData.cpp  GAS_ConfigureFluidParticleData.h  Particles.h  PbfParticle.h  SIM_FluidParticle.cpp  SIM_FluidParticle.h  SIM_Hina_Akinci2012BoundaryParticles.cpp  SIM_Hina_Akinci2012BoundaryParticles.h  SIM_Hina_DFSPHParticles.cpp  SIM_Hina_DFSPHParticles.h  SIM_Hina_Particles.cpp  SIM_Hina_Particles.h
hdk/Rigid/: GAS_Hina_Solver_Rigid.cpp  GAS_Hina_Solver_Rigid.h  SIM_Hina_RigidBody.cpp  SIM_Hina_RigidBody.h
hdk/Smoke/: GAS_Hina_GridAdvect.cpp  GAS_Hina_GridAdvect.h  GAS_Hina_GridBoundarySolver.cpp  GAS_Hina_GridBoundarySolver.h  GAS_Hina_GridBuildMarker.cpp  GAS_Hina_GridBuildMarker.h  GAS_Hina_GridDiffusion.cpp  GAS_Hina_GridDiffusion.h  GAS_Hina_GridExternalForce.cpp  GAS_Hina_GridExternalForce.h  GAS_Hina_GridPressure.cpp  GAS_Hina_GridPressure.h  GAS_Hina_GridSourceEmitter.cpp  GAS_Hina_GridSourceEmitter.h  GAS_Hina_ShowInfo.cpp  GAS_Hina_ShowInfo.h  GAS_Hina_Solver_Smoke.cpp  GAS_Hina_Solver_Smoke.h
hdk/Solvers/: GAS_Hina_DFSPHSolver.cpp  GAS_Hina_DFSPHSolver.h  GAS_ParticleIntegrator.cpp  GAS_ParticleIntegrator.h
hdk/Viscosity/: GAS_ParticleViscosity.cpp  GAS_ParticleViscosity.h
standalone/: CMakeLists.txt  __baked_kernels.cpp  __cunsearch.cpp  __native_multithreading.cpp  __test.cpp
(+224 files in other folders)
